kanc/src/tests/sample_code/should_fail/single_file/variant_return_type/foreign_nullary_type.k
type U {
    .U: U,
}

type Foo {
    .F: U,
}
